# teleop_grasp

./: .repos  README.md  setup.bash
franka_controllers/: CMakeLists.txt  franka_controllers_plugin.xml  package.xml
franka_controllers/config/: cartesian_admittance_controller.cfg  compliance_param.cfg  franka_controllers.yaml
franka_controllers/include/franka_controllers/: cartesian_admittance_controller.h  cartesian_impedance_controller.h  cartesian_pd_nullspace_controller.h  joint_pd_gravity_controller.h  joint_position_pd_gravity_controller.h
franka_controllers/launch/: franka_controllers.launch  panda.launch
franka_controllers/msg/: CartesianAdmittanceControllerDebug.msg
franka_controllers/src/: cartesian_admittance_controller.cpp  cartesian_admittance_controller.cpp.old  cartesian_impedance_controller.cpp  cartesian_pd_nullspace_controller.cpp  joint_pd_gravity_controller.cpp  joint_position_pd_gravity_controller.cpp
teleop_grasp/: CMakeLists.txt  package.xml  requirements.txt
teleop_grasp/assets/graphics/: teleop-grasp-pipeline.drawio  teleop_grasp.pptx
teleop_grasp/config/: franka_description_with_marker.rviz  plotjuggler_layout.xml  teleop_grasp.mplstyle  teleop_grasp.yaml
teleop_grasp/examples/: demo_teleop_grasp.cpp
teleop_grasp/include/teleop_grasp/: teleop_grasp.h
teleop_grasp/include/teleoperation/: teleoperation.h
teleop_grasp/launch/: demo.launch  hand_tracking.launch  pipeline.launch  robot.launch  test.launch  testing.launch
teleop_grasp/scripts/: .keep
teleop_grasp/src/: pipeline.cpp  teleop_grasp.cpp  teleoperation.cpp
teleop_grasp/tests/integration/: test_integration.py
teleop_grasp/tests/integration/data/: integration.bag
teleop_grasp/tests/integration/data/integration/: cartesian_admittance_controller-command.csv  cartesian_admittance_controller-debug.csv  pose_gesture-pose_hand.csv
teleop_grasp/tests/robot_control/: test_robot_control.py  test_robot_control_real.py
teleop_grasp/tests/robot_control/data/: compliance-baseline.bag  compliance-baseline.txt  compliance-orientational.bag  compliance-orientational.txt  compliance-translational-soft-real.bag  compliance-translational-soft-real.txt  compliance-translational-stiff-real.bag  compliance-translational-stiff-real.txt  compliance-translational.bag  compliance-translational.txt  robot-control.bag  robot_control.bag
teleop_grasp/tests/robot_control/data/compliance-baseline/: cartesian_admittance_controller-debug.csv  wrench.csv
teleop_grasp/tests/robot_control/data/compliance-orientational/: cartesian_admittance_controller-debug.csv  wrench.csv
teleop_grasp/tests/robot_control/data/compliance-translational/: cartesian_admittance_controller-debug.csv  wrench.csv
teleop_grasp/tests/robot_control/data/compliance-translational-soft-real/: cartesian_admittance_controller-debug.csv
teleop_grasp/tests/robot_control/data/compliance-translational-stiff-real/: cartesian_admittance_controller-debug.csv
teleop_grasp/tests/robot_control/data/robot-control/: cartesian_admittance_controller-debug.csv  wrench.csv
teleop_grasp/tests/robot_control/data/robot_control/: cartesian_admittance_controller-debug.csv
