<?xml version="1.0"?>
<package format="2">
    <name>franka_controllers</name>
    <version>1.0.0</version>
    <description>ROS Control controllers and interface for the Franka Panda robot</description>

    <author email="vista17@student.sdu.dk">Victor Melbye Staven</author>
    <maintainer email="vista17@student.sdu.dk">Victor Melbye Staven</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>std_msgs</depend>
    <depend>xacro</depend>
    <depend>gazebo_ros</depend>
    <depend>controller_manager</depend>
    <depend>controller_interface</depend>
    <depend>robot_state_publisher</depend>
    <depend>pluginlib</depend>
    <depend>franka_hw</depend>

    <export>
        <!-- from this package, given the requirements from above, export the plugin defined in ${prefix}/franka_controllers_plugin.xml -->
        <controller_interface plugin="${prefix}/franka_controllers_plugin.xml" />
    </export>

</package>