<?xml version="1.0"?>
<package format="2">
	<name>franka_controllers</name>
	<version>1.0.0</version>
	<description>ROS Control controllers for the Franka Panda robot</description>

	<author email="martinandrovich@gmail.com">Martin Androvich</author>
	<author email="peter@qrholm.dk">Peter Ørholm Nielsen</author>
	<author email="victorstaven@protonmail.com">Victor Melbye Staven</author>

	<maintainer email="martinandrovich@gmail.com">Martin Androvich</maintainer>

	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>ros_utils</depend>
	<depend>controller_manager</depend>
	<depend>controller_interface</depend>
	<depend>pluginlib</depend>
	<depend>realtime_tools</depend>
	<depend>franka_hw</depend>
	<depend>eigen_conversions</depend>

	<depend>plotjuggler</depend>
	<depend>plotjuggler_ros</depend>
	<depend>plotjuggler_msgs</depend>

	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	<depend>message_generation</depend>
	<depend>message_runtime</depend>

	<export>
		<controller_interface plugin="${prefix}/franka_controllers_plugin.xml" />
	</export>

</package>