<?xml version="1.0"?>
<package format="2">

	<name>teleop_grasp</name>
	<version>1.0.0</version>
	<description>Compliant teleoperation and gesture-controlled grasping using DNN pose- and gesture estimation in ROS</description>

	<author email="martinandrovich@gmail.com">Martin Androvich</author>
	<author email="victorstaven@protonmail.com">Victor Melbye Staven</author>
	<author email="peter@qrholm.dk">Peter Ørholm Nielsen</author>
	<maintainer email="martinandrovich@gmail.com">Martin Androvich</maintainer>

	<license>BSD</license>

	<url type="repository">https://github.com/teleop-grasp/teleop_grasp</url>

	<!-- build tool -->
	<buildtool_depend>catkin</buildtool_depend>

	<!-- libraries -->
	<depend>Eigen3</depend>
	<!-- <depend>Boost</depend> -->

	<!-- ROS packages -->
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>gazebo_ros</depend>
	<depend>ros_utils</depend>
	<depend>cv_camera</depend>
	<depend>franka_controllers</depend>
	<depend>franka_gripper</depend>
	<depend>gesture_estimation</depend>
	
	<export>
		<!-- https://github.com/sloretz/gazebo_model_path_example -->
		<gazebo_ros gazebo_model_path="${prefix}/models"/>
		<gazebo_ros gazebo_media_path="${prefix}/worlds"/>
	</export>

</package>
